# Uniboard-ESP

./: CMakeLists.txt  README.md
components/uniboard_lib/: CMakeLists.txt  lcd_1602_i2c.c  lcd_1602_i2c.h  onewire.c  onewire.h  util.c  util.h
main/: CMakeLists.txt  main.c
uniboard_lib/: CMakeLists.txt  lcd_1602_i2c.c  lcd_1602_i2c.c.old  lcd_1602_i2c.h  lcd_1602_i2c.h.old
